--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body{
 }
 .Half-width img{
     width:100%;
+    height:100%;
+
+    /*height:400px;*/
 }
 body{
     font-family: "Poppins", sans-serif;
@@ -49,7 +52,7 @@ body{
 }
 section{
     /*border-bottom: 1px solid white;*/
-    height:900px;
+    height:700px;
 }
 .first-half{
     padding:10% 5% 0% 10%;
